--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       matrix:
@@ -26,6 +26,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # for posts's lastmod
+
+      # Ruby 설치 스크립트 추가
+      - name: Install Ruby
+        run: |
+          git clone https://github.com/rbenv/ruby-build.git
+          sudo ./ruby-build/install.sh
+          ruby-build 3.1.4 /opt/hostedtoolcache/Ruby/3.1.4/x64
+          touch /opt/hostedtoolcache/Ruby/3.1.4/x64.complete
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
@@ -43,3 +51,4 @@ jobs:
 
       - name: Test Site
         run: bash tools/test.sh
+
