--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,31 +17,39 @@ jobs:
   build:
     runs-on: ubuntu-24.04
 
-    strategy:
-      matrix:
-        ruby: ["3.1", "3.2", "3.3"]
-
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # for posts's lastmod
 
-      # Ruby 설치 스크립트 추가
-      - name: Install Ruby
+      - name: Install Prerequisites
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git build-essential libssl-dev zlib1g-dev
+
+      - name: Clone ruby-build
         run: |
           git clone https://github.com/rbenv/ruby-build.git
-          sudo ./ruby-build/install.sh
+          cd ruby-build
+          sudo ./install.sh
+
+      - name: Install Ruby
+        run: |
           ruby-build 3.1.4 /opt/hostedtoolcache/Ruby/3.1.4/x64
           touch /opt/hostedtoolcache/Ruby/3.1.4/x64.complete
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
+      - name: Add Ruby to PATH
+        run: |
+          echo "/opt/hostedtoolcache/Ruby/3.1.4/x64/bin" >> $GITHUB_PATH
 
-      - name: Setup Node
+      - name: Verify Ruby Installation
+        run: ruby --version
+
+      - name: Install Bundler and Dependencies
+        run: |
+          gem install bundler
+          bundle install
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
@@ -51,4 +59,3 @@ jobs:
 
       - name: Test Site
         run: bash tools/test.sh
-
