--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,16 +38,10 @@ jobs:
           touch /opt/hostedtoolcache/Ruby/3.1.4/x64.complete
 
       - name: Add Ruby to PATH
-        run: |
-          echo "/opt/hostedtoolcache/Ruby/3.1.4/x64/bin" >> $GITHUB_PATH
+        run: echo "/opt/hostedtoolcache/Ruby/3.1.4/x64/bin" >> $GITHUB_PATH
 
       - name: Verify Ruby Installation
         run: ruby --version
-
-      - name: Install Bundler and Dependencies
-        run: |
-          gem install bundler
-          bundle install
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -55,7 +49,7 @@ jobs:
           node-version: lts/*
 
       - name: Build Assets
-        run: npm i && npm run build
+        run: npm install && npm run build
 
       - name: Test Site
         run: bash tools/test.sh
